k8s/event-bus-deployment.yaml
# Deployment object configuration for the event bus microservice.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: eu.gcr.io/blog-microservices-336813/event-bus
