k8s/posts-service.yaml
# ClusterIP Service for the posts microservice.
apiVersion: v1
kind: Service
metadata:
  name: posts-service
spec:
  type: ClusterIP
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
